<resources>
    <string name="app_name">MovieGenie</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="details_summary_label">Plot:</string>
    <string name="details_release_date_label">Released:</string>
    <string name="details_vote_average_label">Rating:</string>
    <string name="title_activity_detail">Movie Details</string>
    <string name="favorite_off">Mark as favorite</string>
    <string name="favorite_on">FAVORITE</string>

    <!-->Preferences strings </!-->
    <string name="preference_sort_order_key" translatable="false">sortOrder</string>
    <string name="preference_title">Sort movies</string>
    <string name="defaultSortValue">popularity.desc</string>
    <string name="sortValue1">Highest rated</string>
    <string name="title_activity_settings">Settings</string>


    <string-array name="sort_types">
        <item>Highest rated</item>
        <item>Most popular</item>
        <item>Favorites</item>
    </string-array>

    <string-array name="sort_types_values">
        <item>vote_average.desc</item>
        <item>popularity.desc</item>
        <item>favorites</item>
    </string-array>

    <!-->Toast strings </!-->
    <string name="toast_alert_no_favorites">No favorite movies selected!</string>
    <string name="reviews_trailers_label">TRAILERS AND REVIEWS</string>

</resources>
