<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cnegrisanu.eduapps.moviegenie.DetailActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detailsPosterView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/abc_button_padding_horizontal_material"
                android:paddingBottom="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/detailsTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/abc_text_size_medium_material"
                    android:paddingBottom="10dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">
                <TextView
                    android:id="@+id/detailsReleaseDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_release_date_label"
                    android:textSize="@dimen/abc_text_size_small_material"
                    android:textStyle="bold"
                    android:paddingRight="2dp" />
                    <TextView
                        android:id="@+id/detailsReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="5dp"
                    android:padding="5dp">
                    <TextView
                        android:id="@+id/detailsRatingLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details_vote_average_label"
                        android:textSize="@dimen/abc_text_size_small_material"
                        android:textStyle="bold"
                        android:paddingRight="2dp" />
                    <TextView
                        android:id="@+id/detailsRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/favorite_off"
                    android:id="@+id/favoriteToggle"
                    android:textOff="@string/favorite_off"
                    android:textOn="@string/favorite_on" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/details_summary_label"
            android:textSize="@dimen/abc_text_size_subtitle_material_toolbar"
            android:textStyle="bold|italic"
            android:paddingTop="20dp"
            android:paddingBottom="5dp" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <TextView
                android:id="@+id/detailsSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>

    </LinearLayout>

</RelativeLayout>
